# maria

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  docker_entry.py  maria_admin_api.py  maria_context.py  maria_logging.py  maria_os.py  maria_skills_loader.py  maria_stt.py  pyproject.toml  render.yaml  requirements.txt  run.py  tools_maria.py  uazapi_client.py  uazapi_webhook.py
scripts/: list_user_memories.py  smoke_chat.py
skills/cadastro-imoveis/: SKILL.md
skills/cep-endereco/: SKILL.md
skills/midias-leads/: SKILL.md
specs/: agno-agentos-connection.md  implementation-guide.md  maria.md  render-deploy.md  supabase-setup.md
supabase/sql/: leads.sql  mari_conversation_turns.sql  mari_conversation_turns_migrate_v1_to_v2.sql  mari_imoveis.sql  mari_lead_media.sql
